# 3D-Diffusion

./: .gitignore  README.md  __init__.py  pyproject.toml
config/: __init__.py  load.py  schema.py
config/defaults/: completion_template.yaml  diffusion_snet_chair.yaml  img2shape_template.yaml  mm2shape_template.yaml  txt2shape_template.yaml  vqvae_snet_chair.yaml
data/: __init__.py  condition_inputs.py  registry.py  shapenet_sdf.py
docs/: migration_notes.md
engine/: __init__.py  checkpoint.py  evaluator.py  inference.py  logger.py  trainer.py
models/: __init__.py  registry.py  vqvae.py
models/systems/: __init__.py  base_system.py  completion_system.py  image_system.py  multimodal_system.py  text_system.py  uncond_system.py
modules/: __init__.py
modules/conditioners/: __init__.py  base.py  image_conditioner.py  multimodal_conditioner.py  null_conditioner.py  partial_shape_conditioner.py  text_conditioner.py
modules/diffusion/: __init__.py  attention.py  ddim.py  gaussian_diffusion.py  ldm_util.py  legacy_unet.py  plms.py  (+4 more)
scripts/: eval_chair.sh  infer_uncond_chair.sh  preprocess_chair.sh  smoke_test_imports.sh  train_diffusion_chair.sh  train_vqvae_chair.sh
sdfusion_refactored.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: _common.py  check_vqvae_checkpoint.py  compute_latent_stats.py  convert_legacy_checkpoint.py  evaluate_generation.py  evaluate_vqvae.py  infer_uncond.py  inspect_dataset.py  preprocess_shapenet_obj_to_sdf.py  train_diffusion.py  train_vqvae.py
utils/: mesh.py  metrics.py  path.py  sdf_io.py  seed.py
(+5 files in other folders)
