[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdfusion-refactored"
version = "0.1.0"
description = "A refactored SDFusion-style project for 3D diffusion modeling."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Diffusion" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "einops>=0.7",
  "h5py>=3.10",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-image>=0.21",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
preprocess = [
  "rtree>=1.2",
  "trimesh>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config*",
  "data*",
  "engine*",
  "models*",
  "modules*",
  "utils*",
]
exclude = [
  "tests*",
]

[tool.setuptools.package-data]
config = ["defaults/*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py310"
